# fritzer

./: CONTRIBUTION.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: command.rs  connection.rs  lib.rs  main.rs
