[package]
name = "fritzer"
version = "0.0.1"
edition = "2021"
authors = ["Hagen Schink <hagen.schink@posteo.de>"]
license = "MIT"
description = "A command-line tool for the AVM Home Automation (AHA) HTTP Interface"
readme = "README.md"
homepage = "https://github.com/hschink/fritzer"
repository = "https://github.com/hschink/fritzer"
keywords = ["cli", "router", "AVM", "Fritz!Box"]
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libfritzer"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6.0"
pbkdf2 = "0.11"
hex = "0.4"
ring = "0.16.20"
rpassword = "7.2.0"
clap = { version = "4.0.29", features = ["derive"] }
url = { version = "2.3.1", features = ["serde"] }
log = "0.4"
simple_logger = "4.0.0"
async-trait = "0.1.60"
